Fixed overflow issue. Improve styling.

--- a/SSD-Major-Web-Project/wwwroot/css/product-details.css
+++ b/SSD-Major-Web-Project/wwwroot/css/product-details.css
@@ -6,19 +6,21 @@
 
 .product-details-left {
     width: 300px;
-    height: 400px;
-    border: 1px solid black;
 }
 
 .product-image-container {
     object-fit: fill;
-    height: 100%;
-    width: 100%;
+    width: 300px;
+    height: 400px;
 }
 
 .product-image {
     height:inherit;
     width:inherit;
+}
+
+.sub-image {
+    margin-top: 5px;
 }
 
 .product-details-right {
